# HerdingProblem

./: README.md
MATLAB simualtions/: ContainmentRateFunc.m  DistanceTravelledFunc.m  ForceAngular.m  Func_NovelModel_0_TrialMAIN.m  Func_NovelModel_A_MAIN.m  HerdSpreadFunc.m  HerderDynamics_angular.m  HerderDynamics_radial.m  Herder_Initialization.m  TargetDynamics.m  TargetDynamicsCollision.m  TrialMaker_EulerMaruyama.m  getAverageMetrics.m  getMetrics.m  getXsi.m  planeSearch_LeaderFollower.m
MATLABsimulations/: ContainmentTimeFunc.m  ForceRadial.m  Func_NovelModel_B_INIT.m  MeanDistanceFunc.m  README.md  TargetDynamicsBrownian_EulerMaruyama.m  Target_Initialization.m  getPointsInIntervals.m  planeSearch_global.m  planeSearch_peer2peer.m  planeSearch_static.m
MATLABsimulations/Metrics/: README.md
MATLABsimulations/Parameters/: README.md
MATLABsimulations/Trials/: README.md
MATLABsimulations/Trials/Global/: README.md
MATLABsimulations/Trials/LeaderFollower/: README.md
MATLABsimulations/Trials/PeerToPeer/: README.md
MATLABsimulations/Trials/Static/: README.md
ROS simulations/herd_ros/: CMakeLists.txt  package.xml
ROS simulations/herd_ros/launch/: agents.launch
ROS simulations/herd_ros/src/: HerderNodeRos.cpp  SaveData.cpp
ROSsimulations/: README.md
ROSsimulations/agent_description/: CMakeLists.txt  package.xml  urdf.rviz
ROSsimulations/herd_ros/launch/: herd_urdf.launch
agent_description/launch/: agent_display.launch
agent_description/urdf/: target_robot_1.xacro
herd_ros/src/: TaskDivisionRos.py
herd_ros/worlds/: just_herd.world
(+6 files in other folders)
